--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,14 @@
     <string name="todo_item">Enter Task Here</string>
     <string name="additem_sign">Plus sign to add items to the list</string>
     <string name="updateitem_sign">Update items in the list</string>
+    <string name="deleteitem_sign">Delete</string>
     <string name="dialog_message_title">What would you like to do?</string>
     <string name="dialog_content_message">1. Click "update task" if you want to update the selected task in the list \n\n
     2. Click "Create Reminder" to set a reminder for the selected task</string>
     <string name="rubik_cube">Cool Cube</string>
     <string name="title_activity_task">TaskActivity</string>
     <string name="addTask_string">Add Task To List</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
